@@ -2,3 +2,6 @@ Changes since 3.2.1
 0. Numerous cleanups, memory leaks corrected, etc.  See README and NEWS.
 1. Code cleanup and simplification of directory listing and file
    retrieval code.
+2. bbftpd: Use RSA_generate_key_ex instead of deprecated
+   RSA_generate_key.  Additional code simplification/cleanup in
+   bbftpd_crypt.c.
